# games-dash

./: .dockerignore  .gitattributes  .gitignore  ARCADE_GAMES_WISHLIST.md  BUG_BASH_2025-12-02.md  CHANGELOG.md  CHECK_SHELL_CONFIG.ps1  CHESS_COMEDY_COMPLETE.md  CHESS_COMEDY_TROPES.md  CHESS_THEORY_DEEP_DIVE.md  CORRESPONDENCE_GAMES.md  CURSOR_CRITICAL_BUG_REPORT.md  CURSOR_TERMINAL_FIX.md  DELETE_PROFILE.ps1  DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  DOCKER_HYBRID_SETUP.md  DOCKER_WINDOWS_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.linux  Dockerfile.windows  EMULATOR_GUIDE.md  EMULATOR_INTEGRATION.md  EXPANSION_SUMMARY.md  FINAL_VISION.md  FIREBASE_SETUP_GUIDE.md  FIX_PROFILE_FOR_CURSOR.ps1  GAMES_COLLECTION_SUMMARY.md  GAMES_MCP_README.md  GO_GOMOKU_PLAN.md  IDIOT_PROOF_INSTALLER.ps1  IMMEDIATE_WORKAROUND.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_2025-12-02.md  INSTALLER_README.md  Install_Games.bat  LICENSE  LITERATURE_ADDENDUM.md  (+298 more)
.github/workflows/: test.yml
data/: multiplayer.db
data/chess/: blunders.json  endgames.json  (+3 more)
games-mcp/: README.md  __init__.py  pyproject.toml
games-mcp/src/games_mcp/: __init__.py  __main__.py  mcp_server.py
js/: chess-3d-models.js  chess-ai.js  chess-timer.js  game-tracker.js  index-enhancements.js  multiplayer-game.js  tetris-ai.js  theme-switcher.js  webrtc-game.js
katago/: README.txt
tests/: README.md  checkers.test.js  connect4.test.js  gomoku.test.js  minesweeper.test.js  rubiks.test.js  stats.test.js  sudoku.test.js  tetris.test.js  tictactoe.test.js  towers-of-hanoi.test.js
(+26 files in other folders)
